# pscircle

./: LICENSE  README.md  config.h.meson  meson.build  meson_options.txt
docs/: parameters.xml
examples/: 01-left.sh  02-colors.sh  03-background.sh  04-bottom.sh  05-1440x900-res.sh  06-output-to-image.sh  07-no-proc-fs.sh  08-no-toplists.sh  pscircle-9999.ebuild  pscircle.service
include/: argparser.h  cfg.h  color.h  node.h  painter.h  pnode.h  point.h  ppoint.h  proc_linux.h  proc_stream.h  procs.h  timing.h  toplist_visualizer.h  tree_visualizer.h  types.h  utils.h
src/: argparser.c  cfg.c  color.c  node.c  painter.c  pnode.c  point.c  ppoint.c  proc_linux.c  proc_stream.c  procs.c  pscircle.c  timing.c  toplist_visualizer.c  tree_visualizer.c  utils.c
tests/: .ycm_extra_conf.py  argparser.cc  cfg.cc  color.cc  meson.build  node.cc  point.cc  ppoint.cc  procs.cc
